# mcp-router

./: .gitattributes  .gitignore  .npmrc  README.md  components.json  index.html  knip.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: make.yml  release.yml  typecheck.yml
apps/electron/: electron-builder.yml  electron.vite.config.ts  forge.config.ts  package.json
apps/electron/src/: global.d.ts  index.html  main.ts  preload.ts
docs/superpowers/plans/: 2026-04-27-tauri-rewrite-plan-1-scaffolding.md  2026-04-27-tauri-rewrite-plan-2-persistence-foundation.md  2026-04-27-tauri-rewrite-plan-3-remaining-repositories.md  2026-04-27-tauri-rewrite-plan-4-shared-config.md  2026-04-27-tauri-rewrite-plan-5-commands.md  2026-04-27-tauri-rewrite-plan-6-mcp-runtime.md  2026-04-27-tauri-rewrite-plan-7-http-server.md  2026-04-27-tauri-rewrite-plan-7b-real-aggregator.md  2026-04-27-tauri-rewrite-plan-8-hook-runtime.md  2026-04-27-tauri-rewrite-plan-8b-workflow-executor.md  2026-04-27-tauri-rewrite-plan-8c-mcp-call-node.md  2026-04-27-tauri-rewrite-plan-9a-frontend-bridge.md  (+2 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_init_schema.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: autostart.rs  hook_runtime.rs  hooks.rs  logs.rs  mod.rs  ping.rs  projects.rs  server_runtime.rs  servers.rs  settings.rs  tokens.rs  workflows.rs
src-tauri/src/http/: aggregator.rs  auth.rs  mod.rs  serve.rs
src-tauri/src/mcp/: mod.rs  server_manager.rs  status.rs
src-tauri/src/persistence/: mod.rs  pool.rs  registry.rs
src-tauri/src/persistence/repository/: agent_path.rs  hook_module.rs  mod.rs  project.rs  request_log.rs  server.rs  workflow.rs  workspace.rs
src-tauri/src/persistence/types/: agent_path.rs  hook_module.rs  mod.rs  project.rs  request_log.rs  server.rs  workflow.rs  workspace.rs
src-tauri/src/shared_config/: store.rs  types.rs
src-tauri/src/workflow/: executor.rs  hook_runtime.rs  mod.rs
src-tauri/tests/: agent_path_repository_test.rs  error_test.rs  hook_module_repository_test.rs  hook_runtime_test.rs  http_auth_test.rs  ping_test.rs  pool_test.rs  project_repository_test.rs  registry_test.rs  request_log_repository_test.rs  server_manager_test.rs  server_repository_test.rs  shared_config_test.rs  workflow_executor_test.rs  workflow_repository_test.rs  workspace_repository_test.rs
src/components/: App.tsx  Home.tsx  Sidebar.tsx  TitleBar.tsx
src/lib/: i18n.ts
src/locales/: en.json  zh.json
src/platform-api/: electron-platform-api.ts  index.ts  platform-api-context.tsx  tauri-platform-api.ts
src/stores/: index.ts  project-store.ts  server-editing-store.ts  server-store.ts  theme-store.ts
src/styles/: globals.css
src/types/: activity-types.ts  index.ts  mcp-app-types.ts  mcp-apps.ts  mcp-types.ts  settings-types.ts  shared-config.ts  token-types.ts  workspace.ts
(+92 files in other folders)
