[package]
name = "mcp-router"
version = "1.1.0"
description = "Effortlessly manage your MCP servers with the MCP Router."
authors = ["王权 <meraki7304@foxmail.com>"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "mcp_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
async-trait = "0.1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rquickjs = "0.9"
rmcp = { version = "1.5", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-streamable-http-server",
] }
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
http-body-util = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
